# hobbes

./: .coveralls.yml  .gitignore  .plzconfig  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/binding/: CMakeLists.txt  Makefile  binding.cpp
examples/embedding/: CMakeLists.txt  CMakeLists.txt~  Makefile  embedding.cpp
examples/networking/: CMakeLists.txt  Makefile  net.cpp
examples/storage/: CMakeLists.txt  Makefile  reliable_storage.cpp  unreliable_storage.cpp
include/: CMakeLists.txt
include/hobbes/: hobbes.H  net.H
include/hobbes/Lex/: Lexer.h  Parser.h  Token.h  TokenKinds.def
include/hobbes/db/: bindings.H  file.H  series.H  signals.H
include/hobbes/eval/: CompilerInstance.h  cc.H  cexpr.H  cmodule.H  compile_type.H  func.H  funcdefs.H  jitcc.H
include/hobbes/ipc/: net.H  process.H  procman.H
include/hobbes/lang/: closcvt.H  constraints.H  expr.H  macroexpand.H  module.H  tylift.H  type.H  typeinf.H  typemap.H  typepreds.H  tyunqualify.H
include/hobbes/lang/pat/: dfa.H  pattern.H  print.H  regex.H
include/hobbes/lang/preds/: appendsto.H  class.H  consrecord.H  consvariant.H  data.H  deconstruct.H  equal.H  hasctor.H  hasfield.H  haslocation.H  loadref.H  not.H  packsto.H  recty.H  sizeof.H  str.H  subtype.H  typeof.H
include/hobbes/lang/preds/appendsto/: record.H
include/hobbes/lang/preds/hasctor/: variant.H
include/hobbes/lang/preds/hasfield/: lookup.H  record.H  slookup.H  tenvlookup.H
include/hobbes/lang/preds/subtype/: obj.H
include/hobbes/read/pgen/: #hexpr.parse.H#
include/hobbes/util/: array.H  hash.H  lannotation.H  llvm.H  ptr.H  region.H  str.H  time_util.H
lib/hobbes/: CMakeLists.txt
lib/hobbes/Lex/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Token.cpp
lib/hobbes/boot/: CMakeLists.txt
lib/hobbes/db/: CMakeLists.txt  bindings.C  file.C  series.C  signals.C
lib/hobbes/eval/: BUILD  CMakeLists.txt  cc.C  cexpr.C  cmodule.C  ctype.C  func.C  funcdefs.C  jitcc.C
lib/hobbes/events/: CMakeLists.txt  events.C  httpd.C
lib/hobbes/ipc/: CMakeLists.txt  nbindings.C  net.C  prepl.C  process.C  procman.C
lib/hobbes/lang/: CMakeLists.txt  closcvt.C  constraints.C  expr.C  macroexpand.C  module.C  type.C  typeinf.C  typemap.C  typepreds.C  tyunqualify.C
lib/hobbes/lang/pat/: dfa.C  pattern.C  print.C  regex.C
lib/hobbes/lang/preds/subtype/: obj.C
lib/hobbes/parse/: CMakeLists.txt  data.C  grammar.C  lalr.C  parser.C  terminal.C
lib/hobbes/read/: CMakeLists.txt  parser.C
lib/hobbes/read/pgen/: CMakeLists.txt
lib/hobbes/util/: CMakeLists.txt  lannotation.C  region.C  str.C
test/: CMakeLists.txt  Lexer.cpp  LexerTest.cpp  Parser.cpp
vscode/hobbes/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vscode/hobbes/syntaxes/: hobbes.tmLanguage.json
